Fix tracker reply messages trimming white spaces
git-svn-id: http://svn.egroupware.org/egroupware/trunk@51135 923e3c2e-ae13-0410-ba18-ced7211e33de

--- a/tracker/templates/default/app.css
+++ b/tracker/templates/default/app.css
@@ -43,7 +43,6 @@ label.tracker_trIdEdit:before { content: "#"; }
 	display: inline-block;
 	white-space: normal !important;
 }
-span.reply_visible_0 { white-space: normal !important; }
 #tracker-edit_tr_creator {
 	white-space: nowrap;
 	text-overflow: ellipsis;
